feat(email): remove emojis from welcome email and bundle training resources in backend resources